# exotica

./: .travis.yml  Code-Formatting.html  Common-Initialization-Step.html  Documentation.html  Getting-Started-With-Your-Own-Robot.html  Initialization.html  Initializers.html  Installation.html  Manual-Initialization.html  Python-API.html  Quickstart-cpp.html  Quickstart-python.html  Setting-up-ROSlaunch.html  Setting-up-problems-and-solvers.html  Task_maps.html  Using-EXOTica.html  XML-Parsing.html  XML.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/applications/non_stop_picking/: CMakeLists.txt  package.xml
examples/applications/non_stop_picking/include/non_stop_picking/: NonStopPicking.h
examples/applications/non_stop_picking/launch/: PythonPlanPanda.launch  demo.launch  panda_box_demo.launch  panda_demo.launch  panda_rviz.launch  panda_shelf_demo.launch
examples/applications/non_stop_picking/resources/: constraint.traj  ik.xml  moving_obstacle.traj  moving_table.traj  moving_target.traj  panda.urdf  time_indexed_rrt_connect.xml  traj_opt.xml
examples/applications/non_stop_picking/resources/kuka/: demo.scene
examples/applications/non_stop_picking/resources/panda/: constraint.traj  demo.scene  ik.xml  moving_obstacle.traj  moving_table.traj  panda.srdf  panda.urdf  panda_time_indexed_rrt_connect.xml  time_indexed_rrt_connect.xml  (+1 more)
examples/applications/non_stop_picking/scripts/: panda_time_indexed_rrt_connect.py
examples/applications/non_stop_picking/src/: NonStopPicking.cpp  non_stop_picking_node.cpp
(+733 files in other folders)
